# loki-docs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  justfile  wrangler.jsonc
assets/prism/: prism.js
content/en/: architecture.md  examples.md  index.md  installation.md  mcp_tools.md  privacy.md  rhai_apis.md  security.md
content/zh/: architecture.md  examples.md  index.md  installation.md  mcp_tools.md  privacy.md  rhai_apis.md  security.md
gen-manifest-cli/: Cargo.toml
gen-manifest-cli/src/: main.rs
src/: lib.rs  main.rs  types.rs
src/components/: doc_content.rs  doc_engine.rs  header.rs  lazy_tmpl.rs  mod.rs  sidebar.rs  toc.rs
static/: _headers
style/: input.css
templates/: base.j2  comments.j2  header.j2  sidebar.j2  toc.j2
